[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/cpu.png" type="Texture" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 305.876, 256.837 )
scale = Vector2( 2.37704, 2.0371 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Sprite"]
visible = false
margin_left = 18.0
margin_top = -129.0
margin_right = 302.0
margin_bottom = 75.0
color = Color( 0.0392157, 0.243137, 0.941176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite"]
visible = false
margin_left = 36.8324
margin_top = -133.304
margin_right = 281.832
margin_bottom = 38.696
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "\"La placa base, también conocida como tarjeta madre, placa madre o placa principal, es una tarjeta de circuito impreso a la que se conectan los componentes que constituyen la computadora. Es una parte fundamental para montar cualquier computadora personal de escritorio o portátil o algún dispositivo.\""
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Sprite"]
visible = false
margin_left = 28.3326
margin_top = -118.387
margin_right = 300.333
margin_bottom = 65.6132
text = "Cuando se habla de fuente de poder, (o, en ocasiones, de fuente de alimentación y fuente de energía), se hace referencia al sistema que otorga la electricidad imprescindible para alimentar a equipos como ordenadores o computadoras. Generalmente, en las PC de escritorio, la ya citada fuente de poder se localiza en la parte posterior del gabinete y es complementada por un ventilador que impide que el dispositivo se recaliente."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Sprite"]
margin_left = -66.9444
margin_top = 46.6939
margin_right = -24.9444
margin_bottom = 66.6939
text = "Click"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Sprite"]
wait_time = 10.0
autostart = true

[node name="Button2" type="Button" parent="Sprite"]
margin_left = -67.9983
margin_top = -85.9575
margin_right = -25.9983
margin_bottom = -65.9575
text = "Click"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 703.0
margin_top = 78.6739
margin_right = 727.0
margin_bottom = 102.674
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox2" type="CheckBox" parent="."]
margin_left = 707.49
margin_top = 139.287
margin_right = 731.49
margin_bottom = 163.287
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox3" type="CheckBox" parent="."]
margin_left = 709.245
margin_top = 199.613
margin_right = 733.245
margin_bottom = 223.613
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox4" type="CheckBox" parent="."]
margin_left = 709.245
margin_top = 269.206
margin_right = 733.245
margin_bottom = 293.206
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox5" type="CheckBox" parent="."]
margin_left = 707.0
margin_top = 345.533
margin_right = 731.0
margin_bottom = 369.533
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Sprite/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Sprite/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Sprite/Button2" to="." method="_on_Button2_pressed"]
[connection signal="visibility_changed" from="CheckBox" to="." method="_on_CheckBox_visibility_changed"]
